# LineSegmentIntersection

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.cmake  output.h.unc  test_log.txt  uncrustify.cfg
docs/: annotated.html  annotated_dup.js  class_line_segment-members.html  class_line_segment.html  class_line_segment.js  class_point-members.html  class_point.html  class_point.js  class_r_b_tree-members.html  class_r_b_tree.html  class_r_b_tree.js  class_rational-members.html  class_rational.html  class_rational.js  classes.html  custom.css  dir_133bd86c4abd8a0fced190bb6d4514e1.html  dir_133bd86c4abd8a0fced190bb6d4514e1.js  dir_405fd32de3649961a5f009c7a3fe84df.html  dir_405fd32de3649961a5f009c7a3fe84df.js  dir_5d8ff90417924748deef3969ad1e0ba1.html  dir_5d8ff90417924748deef3969ad1e0ba1.js  dir_5eb159725f84c66aafd839904a4acdd0.html  dir_623f9370648513b86b03de959b1659e0.html  dir_6272b9d4c8f62107df4c324a97442de0.html  dir_6272b9d4c8f62107df4c324a97442de0.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_69e0813e31f243981f22bf85b5172f68.html  dir_84080a4afeb98d0f8a049c3a2819f9e0.html  dir_84080a4afeb98d0f8a049c3a2819f9e0.js  dir_ae9a93452e2a84339148a16bcf2eb561.html  dir_ae9a93452e2a84339148a16bcf2eb561.js  dir_c2112b5f90d39da47361d069adb51b04.html  dir_c2112b5f90d39da47361d069adb51b04.js  dir_d56d31c6c1ba66168d953bf2410c711c.html  dir_d56d31c6c1ba66168d953bf2410c711c.js  dir_e8b62dc2db37cc5ab45df0dc24649345.html  dir_f6ecbec6aefb408f1b20f61f1c459dbe.html  dir_f6ecbec6aefb408f1b20f61f1c459dbe.js  (+47 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  (+5 more)
geometry/: CMakeLists.txt  linesegment.h  point.h
geometry/internal/include/: linesegment.h  point.h
geometry/internal/src/: point.inl
main/: main.cpp
scripts/: poly_point_isect.py  segments.py  visualize.py  visualizer.py
src/: CMakeLists.txt
src/geometry/: CMakeLists.txt  intersection.h  linesegment.h  point.h
src/geometry/internal/include/: intersection.h  linesegment.h  point.h  slope.h
src/geometry/internal/src/: geometry.cpp  intersection.cpp  linesegment.inl  point.inl  slope.cpp  slope.inl
src/main/: CMakeLists.txt  main.cpp
src/math/: CMakeLists.txt
src/math/internal/include/: rational.h
src/math/internal/src/: rational.cpp  rational.inl
src/structures/: CMakeLists.txt  rbtree.h
src/structures/internal/include/: rbtree.h  rbtreecolor.h  rbtreeconstiterator.h  rbtreeiterator.h  rbtreenode.h  rbtreenodebase.h  rbtreeutils.h
src/structures/internal/src/: rbtree.inl  rbtreeconstiterator.inl  rbtreeiterator.inl  rbtreenode.inl  rbtreenodebase.cpp
structures/: CMakeLists.txt  rbtree.h
structures/internal/include/: rbtree.h  rbtreeconstiterator.h  rbtreeiterator.h  rbtreenode.h  rbtreenodebase.h
structures/internal/src/: rbtree.inl  rbtreeconstiterator.inl  rbtreeiterator.inl  rbtreenodebase.cpp
test/: CMakeLists.txt
test/geometry/: CMakeLists.txt  intersection.test.cpp  intersection.testqwe.cpp  linesegment.test.cpp  point.test.cpp
test/main/: CMakeLists.txt  main.cpp
test/math/: CMakeLists.txt  rational.test.cpp
test/structures/: CMakeLists.txt  rbtree.test.cpp
